<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.view.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgv_detail_user"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_account_circle_64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_account_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/github_account_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgv_detail_user"
        app:layout_constraintStart_toStartOf="@+id/imgv_detail_user"
        app:layout_constraintTop_toBottomOf="@+id/imgv_detail_user" />

    <TextView
        android:id="@+id/tv_account_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/github_username"
        android:textSize="12sp"
        android:gravity="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tv_account_name"
        app:layout_constraintStart_toStartOf="@+id/tv_account_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_name" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_username">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="2dp">

            <TextView
                android:id="@+id/tv_account_follower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/github_follower" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#CCCCCC" />

            <TextView
                android:id="@+id/tv_account_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/github_following" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabslayout_follower_following_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/table_layout"
        app:tabTextColor="?attr/colorOnSurface" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabslayout_follower_following_detail"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_pager_detail"
        app:srcCompat="@drawable/ic_favorite_border_24dp"
        android:contentDescription="@string/add_to_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>